Java: GptUi: add WindowAssertion